fixing width bug on mobile in the updates section

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
     font-style: italic;
 }
 .screen-reader{
-  display:none;
+  display: none;
 }
 html {
   font-size: 14px;
@@ -87,7 +87,6 @@ html {
 body{
   min-width: 26rem;
 }
-/*FIXED NAV BAR*/
 .navWrap{
   display:flex;
   flex-wrap:wrap;
@@ -112,7 +111,7 @@ body{
   padding-bottom:.5rem;
   cursor: pointer;
 }
-nav{  
+nav{
   width:100%;
 }
 nav ul{
@@ -180,7 +179,7 @@ h4{
   justify-content: center;
   font-family:"Playfair Display Web";
   margin-top: 7.5rem;
-  background: 
+  background:
   linear-gradient( to bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 100% ),
   url(../images/banner-girl.png) no-repeat center 60px,
   url(../images/flower-bkgd.jpg) repeat-x center;
@@ -219,7 +218,7 @@ h4{
   height:100%;
   z-index:-10;
 }
-.wide{   
+.wide{
   box-sizing: border-box;
   border:4px solid white;
   width: 100%;
@@ -242,19 +241,19 @@ h4{
   position:absolute;
   font-family:'Raleway Display Web';
   text-shadow: 2px 2px 4px rgba(100,100,100,0.8);
-  font-size:1.5rem;
+  /*font-size:1.5rem;*/
   font-weight: bold;
   text-transform: uppercase;
   color: white;
   z-index:1;
-  transition: all 1s ease-in;
+  /*transition: all 1s ease-in;*/
 }
-.categoryText:hover{
+/*.categoryText:hover{
   font-size: 2rem;
-}
+}*/
 .products{
   text-align: center;
-  padding: 2em;
+  padding: 4rem 0rem;
   margin:0 auto;
 }
 .carousel{
@@ -275,7 +274,7 @@ h4{
   margin-bottom:1rem;
 }
 .updatesContainer{
-  width:500px;
+  width:300px;
   text-align:center;
 }
 .updates {
@@ -379,7 +378,7 @@ footer a{
     list-style: none;
     flex-wrap: wrap;
   }
-  nav{  
+  nav{
     width:auto;
   }
   .navWrap{
@@ -405,7 +404,7 @@ footer a{
     width:100%;
     height:100%;
   }
-  .wide{   
+  .wide{
     border:4px solid white;
     width: 50%;
     flex: 2 0 50%;
@@ -437,7 +436,7 @@ footer a{
     line-height:2;
   }
   .socialMedia li{
-    display:block; 
+    display:block;
   }
   .socialMedia{
     text-align:left;
